[gd_scene load_steps=3 format=3 uid="uid://vg82yw0lhxyi"]

[ext_resource type="Script" uid="uid://b15dhma05mlvj" path="res://ui/create_game_ui.gd" id="1_dumxo"]
[ext_resource type="PackedScene" uid="uid://chk1pf7m4d7cd" path="res://ui/reward_config_ui.tscn" id="2_vb873"]

[node name="CreateGameUi" type="MarginContainer" node_paths=PackedStringArray("rewards_container", "create_button", "participants_text_edit", "name_line_edit", "game_type_option_button")]
custom_minimum_size = Vector2(800, 0)
offset_right = 430.0
offset_bottom = 236.0
script = ExtResource("1_dumxo")
reward_config_ui_scene = ExtResource("2_vb873")
rewards_container = NodePath("VBoxContainer2/TabContainer/Rewards/VBoxContainer/ScrollContainer/RewardsContainer")
create_button = NodePath("VBoxContainer2/CreateButton")
participants_text_edit = NodePath("VBoxContainer2/TabContainer/Participants/ParticipantsTextEdit")
name_line_edit = NodePath("VBoxContainer2/HBoxContainer/NameLineEdit")
game_type_option_button = NodePath("VBoxContainer2/HBoxContainer2/GameTypeOptionButton")

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="VBoxContainer2/HBoxContainer"]
layout_mode = 2
text = "Name"

[node name="NameLineEdit" type="LineEdit" parent="VBoxContainer2/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer2/HBoxContainer2"]
layout_mode = 2
text = "Game type"

[node name="GameTypeOptionButton" type="OptionButton" parent="VBoxContainer2/HBoxContainer2"]
layout_mode = 2
selected = 0
item_count = 1
popup/item_0/text = "Marbles"
popup/item_0/id = 0

[node name="TabContainer" type="TabContainer" parent="VBoxContainer2"]
custom_minimum_size = Vector2(500, 400)
layout_mode = 2
size_flags_vertical = 3
current_tab = 0

[node name="Rewards" type="MarginContainer" parent="VBoxContainer2/TabContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10
metadata/_tab_index = 0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer2/TabContainer/Rewards"]
layout_mode = 2

[node name="AddRewardButton" type="Button" parent="VBoxContainer2/TabContainer/Rewards/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Add"

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer2/TabContainer/Rewards/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="RewardsContainer" type="VBoxContainer" parent="VBoxContainer2/TabContainer/Rewards/VBoxContainer/ScrollContainer"]
layout_mode = 2

[node name="Participants" type="MarginContainer" parent="VBoxContainer2/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="ParticipantsTextEdit" type="TextEdit" parent="VBoxContainer2/TabContainer/Participants"]
layout_mode = 2
text = "addr_test1qz4f9ksnwtxy7hlx84shvajx66pd0uu3t6hx86qefr9fpk3s8wsef8x6y6sujugw8yw88p4g6t2neeky47ty96nlejeqp03640
addr_test1qp8h3k4jkjcuvpspgajeyfhjqg6qkjrxn6u5pd3l6wf0mz4rkevx5ld2yczp75mynv9mwt0rdtq8xaj09wqdkzeg2u6q7zj49m
addr_test1qp96d0gq8en0dtljslt85dzhqaqcj3h6zcupw74a8q589w5t8asmnenhkgv5tugrcrdzeqcs4wzyrl6qu3gh8sval5sslhxqgd"

[node name="CreateButton" type="Button" parent="VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
text = "Create"

[connection signal="pressed" from="VBoxContainer2/TabContainer/Rewards/VBoxContainer/AddRewardButton" to="." method="_on_add_reward_button_pressed"]
[connection signal="pressed" from="VBoxContainer2/CreateButton" to="." method="_on_create_button_pressed"]
